--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,42 +1,62 @@
-   ---
-   layout: default
-   title: Privacy Policy
-   ---
-# Privacy Policy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { max-width: 700px; margin: 40px auto; font-family: Arial, sans-serif; color: #222; background: #fff; }
+    h1, h2 { color: #2c3e50; }
+    h1 { border-bottom: 2px solid #eee; padding-bottom: 0.3em; }
+    ul { margin-left: 1.5em; }
+    a { color: #007acc; }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p><strong>Effective date:</strong> 09/07/2025</p>
+  <p>
+    Thank you for using Real QR Scanner ("we", "our", or "us").<br>
+    This Privacy Policy explains how we collect, use, and protect your information when you use our mobile application.
+  </p>
 
-Effective date: 09/07/2025
+  <h2>Information We Collect</h2>
+  <ul>
+    <li><strong>Personal Data:</strong> We do not collect or store any personal information such as your name, email address, or contact details.</li>
+    <li><strong>Scanned Data:</strong> Any QR codes or barcodes you scan are processed locally on your device and are not sent to our servers.</li>
+    <li><strong>Device Permissions:</strong> The app may request access to your camera and storage to enable scanning and saving of QR codes. These permissions are used solely for app functionality and are not used to collect data.</li>
+  </ul>
 
-Thank you for using Real QR Scanner ("we", "our", or "us").  
-This Privacy Policy explains how we collect, use, and protect your information when you use our mobile application.
+  <h2>How We Use Information</h2>
+  <ul>
+    <li>We use device permissions only to provide the core features of the app (e.g., scanning QR codes, saving results).</li>
+    <li>We do not share, sell, or transfer your data to third parties.</li>
+  </ul>
 
-## Information We Collect
+  <h2>Third-Party Services</h2>
+  <ul>
+    <li>Real QR Scanner may use third-party services (such as analytics or crash reporting) that may collect anonymous usage data. Please refer to their privacy policies for more information.</li>
+  </ul>
 
-- **Personal Data:** We do not collect or store any personal information such as your name, email address, or contact details.
-- **Scanned Data:** Any QR codes or barcodes you scan are processed locally on your device and are not sent to our servers.
-- **Device Permissions:** The app may request access to your camera and storage to enable scanning and saving of QR codes. These permissions are used solely for app functionality and are not used to collect data.
+  <h2>Data Security</h2>
+  <ul>
+    <li>We take reasonable measures to protect your information. However, no method of transmission over the Internet or electronic storage is 100% secure.</li>
+  </ul>
 
-## How We Use Information
+  <h2>Children’s Privacy</h2>
+  <ul>
+    <li>Our app does not knowingly collect information from children under the age of 13.</li>
+  </ul>
 
-- We use device permissions only to provide the core features of the app (e.g., scanning QR codes, saving results).
-- We do not share, sell, or transfer your data to third parties.
+  <h2>Changes to This Policy</h2>
+  <ul>
+    <li>We may update our Privacy Policy from time to time. Changes will be posted on this page.</li>
+  </ul>
 
-## Third-Party Services
-
-- Real QR Scanner may use third-party services (such as analytics or crash reporting) that may collect anonymous usage data. Please refer to their privacy policies for more information.
-
-## Data Security
-
-- We take reasonable measures to protect your information. However, no method of transmission over the Internet or electronic storage is 100% secure.
-
-## Children’s Privacy
-
-- Our app does not knowingly collect information from children under the age of 13.
-
-## Changes to This Policy
-
-- We may update our Privacy Policy from time to time. Changes will be posted on this page.
-
-## Contact Us
-
-If you have any questions about this Privacy Policy, please contact us at:  
-narenderkumar.hut@gmail.com
+  <h2>Contact Us</h2>
+  <p>
+    If you have any questions about this Privacy Policy, please contact us at:<br>
+    <a href="mailto:narenderkumar.hut@gmail.com">narenderkumar.hut@gmail.com</a>
+  </p>
+</body>
+</html>
