--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -1,37 +1,63 @@
-   ---
-   layout: default
-   title: Privacy Policy
-   ---
-# Terms of Service
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Terms of Service - Real QR Scanner</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    ul {
+      padding-left: 20px;
+    }
+  </style>
+</head>
+<body>
 
-Effective date: 09/07/2025
+  <h1>Terms of Service</h1>
+  <p><strong>Effective date:</strong> 09/07/2025</p>
 
-Welcome to Real QR Scanner!  
-By using our app, you agree to these Terms of Service.
+  <p>Welcome to <strong>Real QR Scanner</strong>!<br>
+  By using our app, you agree to these Terms of Service.</p>
 
-## Use of the App
+  <h2>Use of the App</h2>
+  <ul>
+    <li>You agree to use Real QR Scanner only for lawful purposes and in accordance with these terms.</li>
+    <li>You are responsible for any content you scan, generate, or share using the app.</li>
+  </ul>
 
-- You agree to use Real QR Scanner only for lawful purposes and in accordance with these terms.
-- You are responsible for any content you scan, generate, or share using the app.
+  <h2>Intellectual Property</h2>
+  <ul>
+    <li>All content, features, and functionality in Real QR Scanner are the property of <strong>Nk@2025</strong> and are protected by copyright and other laws.</li>
+  </ul>
 
-## Intellectual Property
+  <h2>Disclaimer</h2>
+  <ul>
+    <li>Real QR Scanner is provided "as is" without warranties of any kind.</li>
+    <li>We do not guarantee the accuracy, completeness, or usefulness of any information provided by the app.</li>
+  </ul>
 
-- All content, features, and functionality in Real QR Scanner are the property of Nk@2025 and are protected by copyright and other laws.
+  <h2>Limitation of Liability</h2>
+  <ul>
+    <li><strong>NK@2025</strong> is not liable for any damages or losses resulting from your use of the app.</li>
+  </ul>
 
-## Disclaimer
+  <h2>Changes to These Terms</h2>
+  <ul>
+    <li>We may update these Terms of Service from time to time. Changes will be posted on this page.</li>
+  </ul>
 
-- Real QR Scanner is provided "as is" without warranties of any kind.
-- We do not guarantee the accuracy, completeness, or usefulness of any information provided by the app.
+  <h2>Contact Us</h2>
+  <p>If you have any questions about these Terms, please contact us at:<br>
+  <a href="mailto:narenderkumar.hut@gmail.com">narenderkumar.hut@gmail.com</a></p>
 
-## Limitation of Liability
-
-- NK@2025 is not liable for any damages or losses resulting from your use of the app.
-
-## Changes to These Terms
-
-- We may update these Terms of Service from time to time. Changes will be posted on this page.
-
-## Contact Us
-
-If you have any questions about these Terms, please contact us at:  
-narenderkumar.hut@gmail.com
+</body>
+</html>
